# syn-sem

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  safety.yml  test.yml
crates/syn-sem/: Cargo.toml  README.md
crates/syn-sem-ast/: Cargo.toml
crates/syn-sem-ast/src/: common.rs  context.rs  data.rs  expr.rs  file.rs  item.rs  lib.rs  lit.rs  pat.rs  path.rs  restriction.rs  stmt.rs  ty.rs
crates/syn-sem-macros/: Cargo.toml  LICENSE-APACHE.txt  README.md
crates/syn-sem-macros/src/: lib.rs
crates/syn-sem/src/: lib.rs
crates/syn-sem/src/etc/: known.rs  mod.rs  util.rs
crates/syn-sem/src/semantic/: mod.rs
crates/syn-sem/src/semantic/analyze/: exch.rs  handler.rs  infer_eval.rs  mod.rs  task.rs
crates/syn-sem/src/semantic/eval/: mod.rs  value.rs
crates/syn-sem/src/semantic/infer/: mod.rs  proc.rs  ty.rs
crates/syn-sem/src/semantic/logic/: construct.rs  find_method.rs  find_ty.rs  inner.rs  mod.rs  term.rs  util.rs
crates/syn-sem/src/semantic/tree/: format.rs  inner.rs  mod.rs  private.rs  public.rs
crates/syn-sem/src/syntax/: common.rs  mod.rs
crates/syn-sem/tests/file/: a1.rs
crates/syn-sem/tests/file/a1/: b1.rs
crates/syn-sem/tests/file/a1/b1/: b2.rs
crates/syn-sem/tests/file/a1/e1/: e4.rs
crates/syn-sem/tests/file/d1/: d2.rs
src/: lib.rs
src/ds/: mod.rs  queue.rs  tree.rs  vec.rs
src/etc/: abs_fs.rs  syn.rs
src/semantic/: basic_traits.rs  helper.rs
src/semantic/analyze/: construct.rs  find_known.rs  monomorphize.rs  resolve.rs  semantics.rs
src/semantic/entry/: context.rs  mod.rs
src/semantic/eval/: proc.rs
src/semantic/infer/: proc.rs
src/semantic/logic/: construct.rs
src/semantic/tree/: item.rs  node.rs  private.rs  ty.rs
src/syntax/: common.rs  file.rs  mod.rs
tests/file/: c1.rs  main.rs
tests/file/a1/e1/: e2.rs
