[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
syn-sem-macros = { version = "0.1.0", path = "crates/syn-sem-macros" }
syn-locator = "0.1.7"
logic-eval = "0.1.5"
logic-eval-util = "0.1.5"
any-intern = "0.1.5"
my-utils = "0.1.1"
syn = "2.0.106"
proc-macro2 = "1.0.91"
quote = "1.0.35"
smallvec = "1.15.1"
parking_lot = "0.10.2"
const_format = "0.2.35"
log = "0.4.28"
hashlink = "0.11.0"
indexmap = "2.11.4"
fxhash = "0.2.1"
once_cell = "1.21.3"
bitflags = "2.11.0"
bumpalo = "3.10.0"
dashmap = "6.1.0"
