[package]
name = "syn-sem-ast"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.1"
description = "Syntax for syn-sem"
readme = "README.md"
repository = "https://github.com/ecoricemon/syn-sem"
license = "Apache-2.0 OR MIT"

[dependencies]
syn-sem-macros = { workspace = true }
any-intern = { workspace = true }
syn-locator = { workspace = true }
bumpalo = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
dashmap = { workspace = true }
